--- a/Exploratory_Analysis.ipynb
+++ b/Exploratory_Analysis.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.22.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "print(pd.__version__)"
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns \n",
+    "import nltk"
    ]
   },
   {
@@ -32,7 +26,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"artworks.csv\")\n",
+    "df = pd.read_csv(\".csv\")\n",
     "print(\"Imported!\")"
    ]
   },
