Import youtube comments csv sheet into notebook

--- a/Exploratory_Analysis.ipynb
+++ b/Exploratory_Analysis.ipynb
@@ -14,25 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imported!\n"
-     ]
-    }
-   ],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\".csv\")\n",
-    "print(\"Imported!\")"
+    "df = pd.read_csv(\"RT_Comments.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -56,178 +49,134 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Artwork ID</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Artist ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Medium</th>\n",
-       "      <th>Dimensions</th>\n",
-       "      <th>Acquisition Date</th>\n",
-       "      <th>Credit</th>\n",
-       "      <th>Catalogue</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Classification</th>\n",
-       "      <th>Object Number</th>\n",
-       "      <th>Diameter (cm)</th>\n",
-       "      <th>Circumference (cm)</th>\n",
-       "      <th>Height (cm)</th>\n",
-       "      <th>Length (cm)</th>\n",
-       "      <th>Width (cm)</th>\n",
-       "      <th>Depth (cm)</th>\n",
-       "      <th>Weight (kg)</th>\n",
-       "      <th>Duration (s)</th>\n",
+       "      <th>id</th>\n",
+       "      <th>user</th>\n",
+       "      <th>date</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>commentText</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>hasReplies</th>\n",
+       "      <th>numberOfReplies</th>\n",
+       "      <th>replies.id</th>\n",
+       "      <th>replies.user</th>\n",
+       "      <th>replies.date</th>\n",
+       "      <th>replies.timestamp</th>\n",
+       "      <th>replies.commentText</th>\n",
+       "      <th>replies.likes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ferdinandsbrücke Project, Vienna, Austria, Ele...</td>\n",
-       "      <td>6210</td>\n",
-       "      <td>Otto Wagner</td>\n",
-       "      <td>1896</td>\n",
-       "      <td>Ink and cut-and-pasted painted pages on paper</td>\n",
-       "      <td>19 1/8 x 66 1/2\" (48.6 x 168.9 cm)</td>\n",
-       "      <td>1996-04-09</td>\n",
-       "      <td>Fractional and promised gift of Jo Carole and ...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>885.1996</td>\n",
+       "      <td>UgyrTRf9bMjFv9LWtNN4AaABAg</td>\n",
+       "      <td>LosAngeles MexicanMaster</td>\n",
+       "      <td>11 hours ago</td>\n",
+       "      <td>1.532069e+12</td>\n",
+       "      <td>ORANGE BUFFOON</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>48.6000</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>168.9000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>City of Music, National Superior Conservatory ...</td>\n",
-       "      <td>7470</td>\n",
-       "      <td>Christian de Portzamparc</td>\n",
-       "      <td>1987</td>\n",
-       "      <td>Paint and colored pencil on print</td>\n",
-       "      <td>16 x 11 3/4\" (40.6 x 29.8 cm)</td>\n",
-       "      <td>1995-01-17</td>\n",
-       "      <td>Gift of the architect in honor of Lily Auchinc...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>1.1995</td>\n",
+       "      <td>UgxT4MeHb6s9J00zUCB4AaABAg</td>\n",
+       "      <td>Donald J Trump</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Me and Putin will make peace</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>40.6401</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>29.8451</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Villa near Vienna Project, Outside Vienna, Aus...</td>\n",
-       "      <td>7605</td>\n",
-       "      <td>Emil Hoppe</td>\n",
-       "      <td>1903</td>\n",
-       "      <td>Graphite, pen, color pencil, ink, and gouache ...</td>\n",
-       "      <td>13 1/2 x 12 1/2\" (34.3 x 31.8 cm)</td>\n",
-       "      <td>1997-01-15</td>\n",
-       "      <td>Gift of Jo Carole and Ronald S. Lauder</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>1.1997</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.3000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>31.8000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3</td>\n",
+       "      <td>LosAngeles MexicanMaster</td>\n",
+       "      <td>11 hours ago</td>\n",
+       "      <td>1.532069e+12</td>\n",
+       "      <td>BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>The Manhattan Transcripts Project, New York, N...</td>\n",
-       "      <td>7056</td>\n",
-       "      <td>Bernard Tschumi</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>Photographic reproduction with colored synthet...</td>\n",
-       "      <td>20 x 20\" (50.8 x 50.8 cm)</td>\n",
-       "      <td>1995-01-17</td>\n",
-       "      <td>Purchase and partial gift of the architect in ...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>2.1995</td>\n",
+       "      <td>UgyQEavPr2OPYD0biKV4AaABAg</td>\n",
+       "      <td>art hick</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>50.8000</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>50.8000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Artwork ID                                              Title Artist ID  \\\n",
-       "0           2  Ferdinandsbrücke Project, Vienna, Austria, Ele...      6210   \n",
-       "1           3  City of Music, National Superior Conservatory ...      7470   \n",
-       "2           4  Villa near Vienna Project, Outside Vienna, Aus...      7605   \n",
-       "3           5  The Manhattan Transcripts Project, New York, N...      7056   \n",
+       "                           id                      user          date  \\\n",
+       "0  UgyrTRf9bMjFv9LWtNN4AaABAg  LosAngeles MexicanMaster  11 hours ago   \n",
+       "1  UgxT4MeHb6s9J00zUCB4AaABAg            Donald J Trump     1 day ago   \n",
+       "2                         NaN                       NaN           NaN   \n",
+       "3  UgyQEavPr2OPYD0biKV4AaABAg                  art hick     1 day ago   \n",
        "\n",
-       "                       Name  Date  \\\n",
-       "0               Otto Wagner  1896   \n",
-       "1  Christian de Portzamparc  1987   \n",
-       "2                Emil Hoppe  1903   \n",
-       "3           Bernard Tschumi  1980   \n",
+       "      timestamp                                        commentText  likes  \\\n",
+       "0  1.532069e+12                                     ORANGE BUFFOON    0.0   \n",
+       "1  1.532023e+12                       Me and Putin will make peace    0.0   \n",
+       "2           NaN                                                NaN    NaN   \n",
+       "3  1.532023e+12  I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...    0.0   \n",
        "\n",
-       "                                              Medium  \\\n",
-       "0      Ink and cut-and-pasted painted pages on paper   \n",
-       "1                  Paint and colored pencil on print   \n",
-       "2  Graphite, pen, color pencil, ink, and gouache ...   \n",
-       "3  Photographic reproduction with colored synthet...   \n",
+       "  hasReplies  numberOfReplies  \\\n",
+       "0      False              0.0   \n",
+       "1       True              1.0   \n",
+       "2        NaN              NaN   \n",
+       "3      False              0.0   \n",
        "\n",
-       "                           Dimensions Acquisition Date  \\\n",
-       "0  19 1/8 x 66 1/2\" (48.6 x 168.9 cm)       1996-04-09   \n",
-       "1       16 x 11 3/4\" (40.6 x 29.8 cm)       1995-01-17   \n",
-       "2   13 1/2 x 12 1/2\" (34.3 x 31.8 cm)       1997-01-15   \n",
-       "3           20 x 20\" (50.8 x 50.8 cm)       1995-01-17   \n",
+       "                                          replies.id  \\\n",
+       "0                                                NaN   \n",
+       "1                                                NaN   \n",
+       "2  UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3   \n",
+       "3                                                NaN   \n",
        "\n",
-       "                                              Credit Catalogue      ...       \\\n",
-       "0  Fractional and promised gift of Jo Carole and ...         Y      ...        \n",
-       "1  Gift of the architect in honor of Lily Auchinc...         Y      ...        \n",
-       "2             Gift of Jo Carole and Ronald S. Lauder         Y      ...        \n",
-       "3  Purchase and partial gift of the architect in ...         Y      ...        \n",
+       "               replies.user  replies.date  replies.timestamp  \\\n",
+       "0                       NaN           NaN                NaN   \n",
+       "1                       NaN           NaN                NaN   \n",
+       "2  LosAngeles MexicanMaster  11 hours ago       1.532069e+12   \n",
+       "3                       NaN           NaN                NaN   \n",
        "\n",
-       "  Classification Object Number Diameter (cm)  Circumference (cm)  Height (cm)  \\\n",
-       "0   Architecture      885.1996           NaN                 NaN      48.6000   \n",
-       "1   Architecture        1.1995           NaN                 NaN      40.6401   \n",
-       "2   Architecture        1.1997           NaN                 NaN      34.3000   \n",
-       "3   Architecture        2.1995           NaN                 NaN      50.8000   \n",
-       "\n",
-       "   Length (cm)  Width (cm)  Depth (cm)  Weight (kg)  Duration (s)  \n",
-       "0          NaN    168.9000         NaN          NaN           NaN  \n",
-       "1          NaN     29.8451         NaN          NaN           NaN  \n",
-       "2          NaN     31.8000         NaN          NaN           NaN  \n",
-       "3          NaN     50.8000         NaN          NaN           NaN  \n",
-       "\n",
-       "[4 rows x 21 columns]"
+       "                                 replies.commentText  replies.likes  \n",
+       "0                                                NaN            NaN  \n",
+       "1                                                NaN            NaN  \n",
+       "2  BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...            0.0  \n",
+       "3                                                NaN            NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
