--- a/Exploratory_Analysis.ipynb
+++ b/Exploratory_Analysis.ipynb
@@ -187,63 +187,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>user</th>\n",
+       "      <th>date</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>commentText</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>hasReplies</th>\n",
+       "      <th>numberOfReplies</th>\n",
+       "      <th>replies.id</th>\n",
+       "      <th>replies.user</th>\n",
+       "      <th>replies.date</th>\n",
+       "      <th>replies.timestamp</th>\n",
+       "      <th>replies.commentText</th>\n",
+       "      <th>replies.likes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UgyrTRf9bMjFv9LWtNN4AaABAg</td>\n",
+       "      <td>LosAngeles MexicanMaster</td>\n",
+       "      <td>11 hours ago</td>\n",
+       "      <td>1.532069e+12</td>\n",
+       "      <td>ORANGE BUFFOON</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3</td>\n",
+       "      <td>LosAngeles MexicanMaster</td>\n",
+       "      <td>11 hours ago</td>\n",
+       "      <td>1.532069e+12</td>\n",
+       "      <td>BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>UgxT4MeHb6s9J00zUCB4AaABAg</td>\n",
+       "      <td>Donald J Trump</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Me and Putin will make peace</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irM2CEoZMs</td>\n",
+       "      <td>Valich</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Secular Progressive \\nTrump is so afraid of Pu...</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UgyQEavPr2OPYD0biKV4AaABAg</td>\n",
+       "      <td>art hick</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irOgUkgCf4</td>\n",
+       "      <td>Secular Progressive</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Valich You’re missing the severity here. The U...</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UgxYQzwc6W6U6oimr5h4AaABAg</td>\n",
+       "      <td>Katone Vi</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Conservatives: Love guns\\nLiberals: Can't figu...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irqgSHTXEm</td>\n",
+       "      <td>Valich</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Secular Progressive \\nThanks!! Yeah I see your...</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "10    Architecture\n",
-       "11    Architecture\n",
-       "12    Architecture\n",
-       "13    Architecture\n",
-       "14    Architecture\n",
-       "15    Architecture\n",
-       "16    Architecture\n",
-       "17    Architecture\n",
-       "18    Architecture\n",
-       "19    Architecture\n",
-       "20    Architecture\n",
-       "21    Architecture\n",
-       "22    Architecture\n",
-       "23    Architecture\n",
-       "24    Architecture\n",
-       "25    Architecture\n",
-       "26    Architecture\n",
-       "27    Architecture\n",
-       "28    Architecture\n",
-       "29    Architecture\n",
-       "Name: Classification, dtype: object"
+       "                           id                      user          date  \\\n",
+       "0  UgyrTRf9bMjFv9LWtNN4AaABAg  LosAngeles MexicanMaster  11 hours ago   \n",
+       "1  UgxT4MeHb6s9J00zUCB4AaABAg            Donald J Trump     1 day ago   \n",
+       "2  UgyQEavPr2OPYD0biKV4AaABAg                  art hick     1 day ago   \n",
+       "3  UgxYQzwc6W6U6oimr5h4AaABAg                 Katone Vi     1 day ago   \n",
+       "\n",
+       "      timestamp                                        commentText  likes  \\\n",
+       "0  1.532069e+12                                     ORANGE BUFFOON    0.0   \n",
+       "1  1.532023e+12                       Me and Putin will make peace    0.0   \n",
+       "2  1.532023e+12  I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...    0.0   \n",
+       "3  1.532023e+12  Conservatives: Love guns\\nLiberals: Can't figu...    0.0   \n",
+       "\n",
+       "  hasReplies  numberOfReplies  \\\n",
+       "0      False              0.0   \n",
+       "1       True              1.0   \n",
+       "2      False              0.0   \n",
+       "3      False              0.0   \n",
+       "\n",
+       "                                          replies.id  \\\n",
+       "0  UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3   \n",
+       "1  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irM2CEoZMs   \n",
+       "2  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irOgUkgCf4   \n",
+       "3  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irqgSHTXEm   \n",
+       "\n",
+       "               replies.user  replies.date  replies.timestamp  \\\n",
+       "0  LosAngeles MexicanMaster  11 hours ago       1.532069e+12   \n",
+       "1                    Valich     1 day ago       1.532023e+12   \n",
+       "2       Secular Progressive     1 day ago       1.532023e+12   \n",
+       "3                    Valich     1 day ago       1.532023e+12   \n",
+       "\n",
+       "                                 replies.commentText  replies.likes  \n",
+       "0  BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...            0.0  \n",
+       "1  Secular Progressive \\nTrump is so afraid of Pu...            0.0  \n",
+       "2  Valich You’re missing the severity here. The U...            0.0  \n",
+       "3  Secular Progressive \\nThanks!! Yeah I see your...            0.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_main = df.apply()"
+    "# Clean up dataset by removing NaN values \n",
+    "\n",
+    "df_main = df.apply(lambda x: pd.Series(x.dropna().values))\n",
+    "df_main[0:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "130262"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['title' 'viewCount' 'channelTitle' 'commentCount' 'likeCount'\\n 'dislikeCount' 'tags' 'favoriteCount' 'videoId' 'channelId' 'categoryId'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-6b3d1e42ee17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create Column Names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_main\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'viewCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelTitle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'commentCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'likeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'dislikeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'tags'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'favoriteCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'videoId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'categoryId'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf_main\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Title'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'viewCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelTitle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'commentCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'likeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'dislikeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'tags'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'favoriteCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'videoId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'categoryId'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf_main\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2131\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2132\u001b[0m             \u001b[0;31m# either boolean or fancy integer index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2133\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2134\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2135\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2175\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2176\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2177\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2178\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[0;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[1;32m   1267\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1268\u001b[0m                     raise KeyError('{mask} not in index'\n\u001b[0;32m-> 1269\u001b[0;31m                                    .format(mask=objarr[mask]))\n\u001b[0m\u001b[1;32m   1270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1271\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0m_values_from_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['title' 'viewCount' 'channelTitle' 'commentCount' 'likeCount'\\n 'dislikeCount' 'tags' 'favoriteCount' 'videoId' 'channelId' 'categoryId'] not in index\""
+     ]
     }
    ],
    "source": [
-    "Classification = df['Classification']\n",
-    "Classification.count()"
+    "# Create Column Names \n",
+    "df_main = df[['title','viewCount','channelTitle','commentCount','likeCount','dislikeCount','tags','favoriteCount','videoId','channelId','categoryId']]\n",
+    "df_main.columns = ['Title','viewCount','channelTitle','commentCount','likeCount','dislikeCount','tags','favoriteCount','videoId','channelId','categoryId']\n",
+    "df_main.head()"
    ]
   }
  ],
