Set relevant columns equal to variables for further analysis

--- a/Exploratory_Analysis.ipynb
+++ b/Exploratory_Analysis.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
     "import nltk"
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -296,6 +297,23 @@
        "      <td>Secular Progressive \\nThanks!! Yeah I see your...</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UgztbOC038O2YLnsDN54AaABAg</td>\n",
+       "      <td>Kris Chu</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Great job! At least this one isn’t warmongerin...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UgycvHT4_aqQ9purqft4AaABAg.8ip864Rh6C_8ipDVRUq2e4</td>\n",
+       "      <td>Omnipresent Baguette</td>\n",
+       "      <td>2 days ago</td>\n",
+       "      <td>1.531936e+12</td>\n",
+       "      <td>Morris RT is more tsar like then commie\\nThe c...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -306,39 +324,45 @@
        "1  UgxT4MeHb6s9J00zUCB4AaABAg            Donald J Trump     1 day ago   \n",
        "2  UgyQEavPr2OPYD0biKV4AaABAg                  art hick     1 day ago   \n",
        "3  UgxYQzwc6W6U6oimr5h4AaABAg                 Katone Vi     1 day ago   \n",
+       "4  UgztbOC038O2YLnsDN54AaABAg                  Kris Chu     1 day ago   \n",
        "\n",
        "      timestamp                                        commentText  likes  \\\n",
        "0  1.532069e+12                                     ORANGE BUFFOON    0.0   \n",
        "1  1.532023e+12                       Me and Putin will make peace    0.0   \n",
        "2  1.532023e+12  I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...    0.0   \n",
        "3  1.532023e+12  Conservatives: Love guns\\nLiberals: Can't figu...    0.0   \n",
+       "4  1.532023e+12  Great job! At least this one isn’t warmongerin...    0.0   \n",
        "\n",
        "  hasReplies  numberOfReplies  \\\n",
        "0      False              0.0   \n",
        "1       True              1.0   \n",
        "2      False              0.0   \n",
        "3      False              0.0   \n",
+       "4      False              0.0   \n",
        "\n",
        "                                          replies.id  \\\n",
        "0  UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3   \n",
        "1  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irM2CEoZMs   \n",
        "2  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irOgUkgCf4   \n",
        "3  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irqgSHTXEm   \n",
+       "4  UgycvHT4_aqQ9purqft4AaABAg.8ip864Rh6C_8ipDVRUq2e4   \n",
        "\n",
        "               replies.user  replies.date  replies.timestamp  \\\n",
        "0  LosAngeles MexicanMaster  11 hours ago       1.532069e+12   \n",
        "1                    Valich     1 day ago       1.532023e+12   \n",
        "2       Secular Progressive     1 day ago       1.532023e+12   \n",
        "3                    Valich     1 day ago       1.532023e+12   \n",
+       "4      Omnipresent Baguette    2 days ago       1.531936e+12   \n",
        "\n",
        "                                 replies.commentText  replies.likes  \n",
        "0  BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...            0.0  \n",
        "1  Secular Progressive \\nTrump is so afraid of Pu...            0.0  \n",
        "2  Valich You’re missing the severity here. The U...            0.0  \n",
-       "3  Secular Progressive \\nThanks!! Yeah I see your...            0.0  "
+       "3  Secular Progressive \\nThanks!! Yeah I see your...            0.0  \n",
+       "4  Morris RT is more tsar like then commie\\nThe c...            1.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,34 +371,45 @@
     "# Clean up dataset by removing NaN values \n",
     "\n",
     "df_main = df.apply(lambda x: pd.Series(x.dropna().values))\n",
-    "df_main[0:4]"
+    "df_main.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['title' 'viewCount' 'channelTitle' 'commentCount' 'likeCount'\\n 'dislikeCount' 'tags' 'favoriteCount' 'videoId' 'channelId' 'categoryId'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-6b3d1e42ee17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create Column Names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_main\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'viewCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelTitle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'commentCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'likeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'dislikeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'tags'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'favoriteCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'videoId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'categoryId'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf_main\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Title'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'viewCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelTitle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'commentCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'likeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'dislikeCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'tags'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'favoriteCount'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'videoId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'channelId'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'categoryId'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf_main\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2131\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2132\u001b[0m             \u001b[0;31m# either boolean or fancy integer index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2133\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2134\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2135\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2175\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2176\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2177\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2178\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[0;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[1;32m   1267\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1268\u001b[0m                     raise KeyError('{mask} not in index'\n\u001b[0;32m-> 1269\u001b[0;31m                                    .format(mask=objarr[mask]))\n\u001b[0m\u001b[1;32m   1270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1271\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0m_values_from_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"['title' 'viewCount' 'channelTitle' 'commentCount' 'likeCount'\\n 'dislikeCount' 'tags' 'favoriteCount' 'videoId' 'channelId' 'categoryId'] not in index\""
-     ]
+     "data": {
+      "text/plain": [
+       "0    0.0\n",
+       "1    0.0\n",
+       "2    0.0\n",
+       "3    0.0\n",
+       "4    1.0\n",
+       "5    2.0\n",
+       "6    3.0\n",
+       "7    0.0\n",
+       "8    0.0\n",
+       "9    0.0\n",
+       "Name: replies.likes, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create Column Names \n",
-    "df_main = df[['title','viewCount','channelTitle','commentCount','likeCount','dislikeCount','tags','favoriteCount','videoId','channelId','categoryId']]\n",
-    "df_main.columns = ['Title','viewCount','channelTitle','commentCount','likeCount','dislikeCount','tags','favoriteCount','videoId','channelId','categoryId']\n",
-    "df_main.head()"
+    "User = df_main['user']\n",
+    "CommentText = df_main['commentText']\n",
+    "LikesTotal = df_main['likes']\n",
+    "RepliesTotal = df_main['numberOfReplies']\n",
+    "RepliedUsers = df_main['replies.user']\n",
+    "RepliedText = df_main['replies.commentText']\n",
+    "RepliedLiked = df_main['replies.likes']\n",
+    "\n",
+    "RepliedLiked.head(10)"
    ]
   }
  ],
