Change data types in set

--- a/Exploratory_Analysis.ipynb
+++ b/Exploratory_Analysis.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
-    "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns \n",
-    "import nltk"
+    "import matplotlib.pyplot as plt  \n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "3                                                NaN            NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "4  Morris RT is more tsar like then commie\\nThe c...            1.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,46 +371,231 @@
     "# Clean up dataset by removing NaN values \n",
     "\n",
     "df_main = df.apply(lambda x: pd.Series(x.dropna().values))\n",
-    "df_main.head()"
+    "comments = df_main\n",
+    "comments.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Identification</th>\n",
+       "      <th>User</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>CommentText</th>\n",
+       "      <th>Likes</th>\n",
+       "      <th>HasReplies</th>\n",
+       "      <th>TotalReplies</th>\n",
+       "      <th>RepliesTotal</th>\n",
+       "      <th>RepliesIdentification</th>\n",
+       "      <th>UserReplies</th>\n",
+       "      <th>ReplyDate</th>\n",
+       "      <th>ReplyComments</th>\n",
+       "      <th>ReplyLikes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UgyrTRf9bMjFv9LWtNN4AaABAg</td>\n",
+       "      <td>LosAngeles MexicanMaster</td>\n",
+       "      <td>11 hours ago</td>\n",
+       "      <td>1.532069e+12</td>\n",
+       "      <td>ORANGE BUFFOON</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3</td>\n",
+       "      <td>LosAngeles MexicanMaster</td>\n",
+       "      <td>11 hours ago</td>\n",
+       "      <td>1.532069e+12</td>\n",
+       "      <td>BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>UgxT4MeHb6s9J00zUCB4AaABAg</td>\n",
+       "      <td>Donald J Trump</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Me and Putin will make peace</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irM2CEoZMs</td>\n",
+       "      <td>Valich</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Secular Progressive \\nTrump is so afraid of Pu...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UgyQEavPr2OPYD0biKV4AaABAg</td>\n",
+       "      <td>art hick</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irOgUkgCf4</td>\n",
+       "      <td>Secular Progressive</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Valich You’re missing the severity here. The U...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UgxYQzwc6W6U6oimr5h4AaABAg</td>\n",
+       "      <td>Katone Vi</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Conservatives: Love guns\\nLiberals: Can't figu...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irqgSHTXEm</td>\n",
+       "      <td>Valich</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Secular Progressive \\nThanks!! Yeah I see your...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UgztbOC038O2YLnsDN54AaABAg</td>\n",
+       "      <td>Kris Chu</td>\n",
+       "      <td>1 day ago</td>\n",
+       "      <td>1.532023e+12</td>\n",
+       "      <td>Great job! At least this one isn’t warmongerin...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>UgycvHT4_aqQ9purqft4AaABAg.8ip864Rh6C_8ipDVRUq2e4</td>\n",
+       "      <td>Omnipresent Baguette</td>\n",
+       "      <td>2 days ago</td>\n",
+       "      <td>1.531936e+12</td>\n",
+       "      <td>Morris RT is more tsar like then commie\\nThe c...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0    0.0\n",
-       "1    0.0\n",
-       "2    0.0\n",
-       "3    0.0\n",
-       "4    1.0\n",
-       "5    2.0\n",
-       "6    3.0\n",
-       "7    0.0\n",
-       "8    0.0\n",
-       "9    0.0\n",
-       "Name: replies.likes, dtype: float64"
+       "               Identification                      User          Date  \\\n",
+       "0  UgyrTRf9bMjFv9LWtNN4AaABAg  LosAngeles MexicanMaster  11 hours ago   \n",
+       "1  UgxT4MeHb6s9J00zUCB4AaABAg            Donald J Trump     1 day ago   \n",
+       "2  UgyQEavPr2OPYD0biKV4AaABAg                  art hick     1 day ago   \n",
+       "3  UgxYQzwc6W6U6oimr5h4AaABAg                 Katone Vi     1 day ago   \n",
+       "4  UgztbOC038O2YLnsDN54AaABAg                  Kris Chu     1 day ago   \n",
+       "\n",
+       "      Timestamp                                        CommentText  Likes  \\\n",
+       "0  1.532069e+12                                     ORANGE BUFFOON      0   \n",
+       "1  1.532023e+12                       Me and Putin will make peace      0   \n",
+       "2  1.532023e+12  I FUCKING LOVE TRUMP. HE IS HAVING A BLAST WIT...      0   \n",
+       "3  1.532023e+12  Conservatives: Love guns\\nLiberals: Can't figu...      0   \n",
+       "4  1.532023e+12  Great job! At least this one isn’t warmongerin...      0   \n",
+       "\n",
+       "  HasReplies  TotalReplies                                       RepliesTotal  \\\n",
+       "0      False             0  UgxT4MeHb6s9J00zUCB4AaABAg.8isqulEjc5h8iuss_cAsI3   \n",
+       "1       True             1  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irM2CEoZMs   \n",
+       "2      False             0  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irOgUkgCf4   \n",
+       "3      False             0  Ugw-iFkRHhTxI2ndkpl4AaABAg.8ipNuaU_po68irqgSHTXEm   \n",
+       "4      False             0  UgycvHT4_aqQ9purqft4AaABAg.8ip864Rh6C_8ipDVRUq2e4   \n",
+       "\n",
+       "      RepliesIdentification   UserReplies     ReplyDate  \\\n",
+       "0  LosAngeles MexicanMaster  11 hours ago  1.532069e+12   \n",
+       "1                    Valich     1 day ago  1.532023e+12   \n",
+       "2       Secular Progressive     1 day ago  1.532023e+12   \n",
+       "3                    Valich     1 day ago  1.532023e+12   \n",
+       "4      Omnipresent Baguette    2 days ago  1.531936e+12   \n",
+       "\n",
+       "                                       ReplyComments  ReplyLikes  \n",
+       "0  BENJAMIN NETANYAHU IS YOUR BOSS!    stupid ora...           0  \n",
+       "1  Secular Progressive \\nTrump is so afraid of Pu...           0  \n",
+       "2  Valich You’re missing the severity here. The U...           0  \n",
+       "3  Secular Progressive \\nThanks!! Yeah I see your...           0  \n",
+       "4  Morris RT is more tsar like then commie\\nThe c...           1  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "User = df_main['user']\n",
-    "CommentText = df_main['commentText']\n",
-    "LikesTotal = df_main['likes']\n",
-    "RepliesTotal = df_main['numberOfReplies']\n",
-    "RepliedUsers = df_main['replies.user']\n",
-    "RepliedText = df_main['replies.commentText']\n",
-    "RepliedLiked = df_main['replies.likes']\n",
+    "# Establish relevant columns as variables for further analysis\n",
     "\n",
-    "RepliedLiked.head(10)"
+    "comments.columns = ['Identification', 'User', 'Date', 'Timestamp', 'CommentText', 'Likes', 'HasReplies', 'TotalReplies', 'RepliesTotal', 'RepliesIdentification', 'UserReplies', 'ReplyDate', 'ReplyComments', 'ReplyLikes']\n",
+    "comments = comments.fillna(0)\n",
+    "comments.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments['Identification'] = comments.Identification.astype(str)\n",
+    "comments['User'] = comments.User.astype(str)\n",
+    "comments['CommentText'] = comments.CommentText.astype(str)\n",
+    "comments['Likes'] = comments.Likes.astype(int)\n",
+    "comments['TotalReplies'] = comments.TotalReplies.astype(int)\n",
+    "comments['RepliesIdentification'] = comments.RepliesIdentification.astype(str)\n",
+    "comments['ReplyComments'] = comments.ReplyComments.astype(str)\n",
+    "comments['ReplyLikes'] = comments.ReplyLikes.astype(int)\n",
+    "\n",
+    "print(\"Success\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
